# ChillingSnailz6969

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  index.html  manage.py  pyproject.toml  requirements.txt  snail_snake.html  snailz_invaders.html  snailz_invaders_1.html  vercel.json
.github/workflows/: ci.yml
api/: wsgi.py
apps/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/accounts/: profile.html  register.html
apps/audit/: admin.py  apps.py  gdpr.py  middleware.py  models.py  tasks.py
apps/audit/migrations/: 0001_initial.py
apps/core/static/core/: invaders.html
apps/core/static/core/css/: main.css
apps/core/static/core/js/: cursor.js  main.js  nav.js  wallet.js
apps/core/templates/core/: _faction_card.html  _roadmap.html  base.html  home.html
apps/gaming/: apps.py  models.py  urls.py  views.py
apps/gaming/migrations/: 0001_initial.py
apps/gaming/templates/gaming/: index.html  invaders.html  munch.html
apps/nft/: admin.py  api_urls.py  api_views.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/nft/migrations/: 0001_initial.py
apps/nft/templates/nft/: collection.html
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  vercel.py
docs/: deployment.md  security_checklist.md
nginx/: nginx.conf
scripts/: backup_db.py
tests/: conftest.py  test_accounts.py  test_audit.py  test_gaming.py  test_nft.py  test_security.py
