[project]
name = "chillingsnailz"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1,<5.2",
    "djangorestframework>=3.15,<4.0",
    "django-allauth>=65.0,<66.0",
    "django-axes>=7.0,<8.0",
    "django-csp>=4.0,<5.0",
    "django-encrypted-model-fields>=0.6,<1.0",
    "django-environ>=0.11,<1.0",
    "whitenoise>=6.6,<7.0",
    "pillow>=11.0,<12.0",
    "django-ratelimit>=4.1,<5.0",
    "gunicorn>=23.0,<24.0",
    "psycopg[binary]>=3.2,<4.0",
    "celery>=5.4,<6.0",
    "redis>=5.2,<6.0",
    "sentry-sdk[django]>=2.18,<3.0",
    "structlog>=24.4,<25.0",
    "web3>=7.6,<8.0",
    "argon2-cffi>=23.1,<24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "pytest-cov>=6.0,<7.0",
    "coverage>=7.6,<8.0",
    "ruff>=0.8,<1.0",
    "bandit>=1.8,<2.0",
    "safety>=3.2,<4.0",
    "factory-boy>=3.3,<4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["apps", "config"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "A", "C4", "DTZ", "T20", "ICN"]
ignore = ["S101", "S308"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["tests.py", "test_*.py"]
python_paths = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
